TWINS-285: auto add domain creator to DOMAIN_ADMIN group + changing user_group_map architecture